--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,10 +17,13 @@ jobs:
       with:
         python-version: '3.x'
         
+    - name: Install Poetry
+      run: |
+        pip install poetry==1.3.1
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
+        poetry install
 
     - name: Create Executable
       run: |
@@ -48,10 +51,13 @@ jobs:
       with:
         python-version: '3.x'
         
+    - name: Install Poetry
+      run: |
+        pip install poetry==1.3.1
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
+        poetry install
 
     - name: Create Executable
       run: |
