--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["orencohendev <oren@orencreates.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.12"
 Pillow = "^9.5.0"
+pyinstaller = "^5.12.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
