--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,14 +30,11 @@ jobs:
         poetry run pyinstaller --onefile png_to_webp_converter.py
 
     - name: Upload Executable as Release Asset
-      uses: actions/upload-release-asset@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./dist/png_to_webp_converter.exe
-        asset_name: png_to_webp_converter.exe
-        asset_content_type: application/octet-stream
+        files: ./dist/png_to_webp_converter.exe
 
   build-macos:
     runs-on: macos-latest
@@ -64,11 +61,8 @@ jobs:
         poetry run pyinstaller --onefile png_to_webp_converter.py
 
     - name: Upload Executable as Release Asset
-      uses: actions/upload-release-asset@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./dist/png_to_webp_converter
-        asset_name: png_to_webp_converter
-        asset_content_type: application/octet-stream
+        files: ./dist/png_to_webp_converter
