--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,6 +69,8 @@ jobs:
     needs: [build-windows, build-macos]
     runs-on: ubuntu-latest
     steps:
+      - name: List files in dist
+        run: ls -l dist
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
