--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.11,<3.12"
 Pillow = "^9.5.0"
 pyinstaller = "^5.12.0"
+ttkbootstrap = "^1.10.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
