--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,6 +78,40 @@ jobs:
         name: macos-artifact
         path: ./output/*
 
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        
+    - name: Install Poetry
+      run: |
+        pip install poetry==1.3.1
+
+    - name: Install dependencies
+      run: |
+        poetry install
+
+    - name: Create Executable
+      run: |
+        poetry run pyinstaller --noconsole --onefile image_modernizer.py
+
+    - name: Move Executable to output directory
+      run: |
+        mkdir output
+        mv ./dist/image_modernizer ./output
+
+    - name: Upload Executable as Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: macos-artifact
+        path: ./output/*
+
   release:
     if: github.event_name == 'release'
     needs: [build-windows, build-macos]
