--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,13 +27,18 @@ jobs:
 
     - name: Create Executable
       run: |
-        poetry run pyinstaller --onefile png_to_webp_converter.py
+        poetry run pyinstaller --noconsole --onefile image_modernizer.py
+
+    - name: Move Executable to output directory
+      run: |
+        mkdir output
+        mv ./dist/image_modernizer.exe ./output
 
     - name: Upload Executable as Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: png_to_webp_converter.exe
-        path: ./dist/png_to_webp_converter.exe
+        name: windows-artifact
+        path: ./output/*
 
   build-macos:
     runs-on: macos-latest
@@ -57,16 +62,56 @@ jobs:
 
     - name: Create Executable
       run: |
-        poetry run pyinstaller --onefile png_to_webp_converter.py
+        poetry run pyinstaller --noconsole --onefile image_modernizer.py
+
+    - name: Move Executable to output directory
+      run: |
+        mkdir output
+        mv ./dist/image_modernizer ./output
 
     - name: Upload Executable as Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: png_to_webp_converter
-        path: ./dist/png_to_webp_converter
+        name: macos-artifact
+        path: ./output/*
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        
+    - name: Install Poetry
+      run: |
+        pip install poetry==1.3.1
+
+    - name: Install dependencies
+      run: |
+        poetry install
+
+    - name: Create Executable
+      run: |
+        poetry run pyinstaller --noconsole --onefile image_modernizer.py
+
+    - name: Move Executable to output directory
+      run: |
+        mkdir output
+        mv ./dist/image_modernizer ./output
+
+    - name: Upload Executable as Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: linux-artifact
+        path: ./output/*
 
   release:
-    needs: [build-windows, build-macos]
+    if: github.event_name == 'release'
+    needs: [build-windows, build-macos, build-linux]
     runs-on: ubuntu-latest
     steps:
       - name: Create dist directory
@@ -75,13 +120,19 @@ jobs:
       - name: Download Windows Artifact
         uses: actions/download-artifact@v2
         with:
-          name: png_to_webp_converter.exe
+          name: windows-artifact
           path: dist
 
       - name: Download MacOS Artifact
         uses: actions/download-artifact@v2
         with:
-          name: png_to_webp_converter
+          name: macos-artifact
+          path: dist
+
+      - name: Download Linux Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: linux-artifact
           path: dist
 
       - name: List files in dist
