--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,8 +67,13 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.11'
         
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      run: |
+        brew install python-tk@3.11
+
     - name: Install Poetry
       run: |
         pip install poetry==1.3.1
@@ -79,7 +84,7 @@ jobs:
 
     - name: Create Executable
       run: |
-        poetry run pyinstaller --noconsole --onefile --add-data '/usr/local/Cellar/python/3.11/Python:tcl' image_modernizer.py
+        poetry run pyinstaller --noconsole --onefile image_modernizer.py
 
     - name: Move Executable to output directory
       run: |
