--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,8 +69,7 @@ jobs:
       with:
         python-version: '3.11'
         
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - name: Setup tkinter
       run: |
         brew install python-tk@3.11
 
